# MLOps-lab11

./: .dockerignore  Dockerfile  Dockerfile.dev  README.md  app.py  main.py  pyproject.toml
.github/workflows/: ci_cd_workflow.yaml  hello_world.yaml
sentiment_app/: app.py  test_app.py
src/scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py  settings.py
